--- a/aula04/exe005.html
+++ b/aula04/exe005.html
@@ -4,35 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curso em video</title>
-  <style>
-    div#area {
-      font: normal 20pt Arial;
-      background: rgb(42, 139, 42);
-      color: white;
-      width: 200px;
-      height: 200px;
-      line-height: 200px;
-      text-align: center;
-    }
-  </style>
-  
+  <title>Hora do dia</title>  
+  <link rel="stylesheet" href="exe005.css"> <!--cmd+click cria o arquivo-->
 </head>
-<body>
-  <h1 id="texto">Eventos no HTML</h1>
-  <div id="area" onmouseover="clicar()">
-    teste
-  </div>
+<body id="corpo" onload="carregar()">
+  <header>
+    <h1>Hora do dia</h1>
+  </header>
+  <section id="sessao">
+    <div id="msg">
+      
+    </div>
+    <div id="foto">
+      <img id="imagem" alt="manha" >
+    </div>
+  </section>
+  <footer>
+    <p>&copy; Curso em Video</p>
+  </footer>
 
-  <script>
-    function clicar(){
-      let conteudo = document.getElementById('area');
-      conteudo.innerText = 'Clicou';
-      conteudo.style.background = 'red';
-    }
-
-    
-  </script>  
-
+  <script src="exe005.js"></script>
+  
 </body>
 </html>
